<resources>
    <string name="app_name">Firebase14S_21_22</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="email">E-mail</string>
    <string name="fullName">Valós név</string>
    <string name="requiredError">Nem lehet üres</string>
</resources>